--- a/package.json
+++ b/package.json
@@ -11,12 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
-  },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/knex": "^0.16.1",
@@ -27,6 +21,10 @@
     "express": "^4.18.1",
     "knex": "^2.2.0",
     "mysql": "^2.18.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
